# math-interpriter

./: .gitignore  CMakeLists.txt  README.md  tests.txt
include/: ast.hpp  lexer.hpp  main.hpp  parser.hpp  token.hpp
src/: ast.cpp  lexer.cpp  main.cpp  notes.txt  parser.cpp  token.cpp
